<resources>
    <string name="app_name">Health Monitor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="aggiungi_report">Aggiungi report</string>

    <!-- Main Activity -->
    <string name="home_title">Benvenuto in Health Monitor</string>
    <string name="home_description">L\'App che ti permette di tenere sotto controllo la tua salute.</string>

    <!-- Report strings -->
    <string name="ReportActivity">Report Activity</string>
    <string name="report_title">Aggiungi Report</string>
    <string name="temp_id">Temperatura corporea</string>
    <string name="battito_id">Battito cardiaco</string>
    <string name="pressione_id">Pressione sanguigna</string>
    <string name="glicemia_id">Glicemia</string>
    <string name="save_report">Salva</string>
    <string name="update_report">Aggiorna</string>
    <string name="delete_report">Elimina</string>
    <string name="label_temp">Temperatura</string>
    <string name="label_press">Pressione</string>
    <string name="label_glic">Glicemia</string>
    <string name="label_batt">Battito</string>
    <string name="label_note">Nota</string>

    <!-- Settings Page Strings -->
    <string name="notification_hour_btn">Orario</string>
    <string name="settings_title">La mia routine</string>
    <string name="settings_description">Health Monitor ti permette di impostare un promemoria durante la giornata in cui ti ricorda di aggiungere un Report sulla tua salute.</string>
    <string name="time_enable_text">Notifiche</string>

    <string name="value_controller_title">Monitoraggio dei valori</string>
    <string name="value_controller_description">Health Monitor ti permette di monitorare un valore e impostare una soglia massima che può raggiungere. Nel caso in cui dovesse essere superata, verrai avvisato quando aggiungi o aggiorni un Report.</string>
    <string name="control_enable_text">Monitoraggio valori</string>
    <string name="value_to_monitor">Valore da monitorare</string>
    <string name="limit">Limite</string>

    <string name="saved_time_notification">0</string>
</resources>