<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    app:key="rootKey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/settings_title"/>
    <Preference
        app:title="@string/settings_description"/>

    <SwitchPreferenceCompat
        app:key="notifications"
        android:disableDependentsState="false"
        app:title="Abilita notifiche" />

    <Preference
        app:key="settingHour"
        android:dependency="notifications"
        app:title="Orario"
        />

    <PreferenceCategory
        app:title="@string/value_controller_title"/>
    <Preference
        app:title="@string/value_controller_description"/>

    <SwitchPreferenceCompat
        app:key="valueMonitor"
        app:title="Attiva monitoraggio valore" />

    <DropDownPreference
        app:key="valueToMonitor"
        android:title="Indice"
        android:dependency="valueMonitor"
        app:entryValues="@array/monitor_value_array"
        />

    <EditTextPreference
        app:key="valueToMonitorNumber"
        android:title="Soglia massima"
        android:defaultValue="100"
        android:dependency="valueMonitor"
        />


</androidx.preference.PreferenceScreen>