<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/cardview_default_elevation">

    <TextView
        android:id="@+id/grafico_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Grafici"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/grafico_test"
        android:gravity="center"
        >

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_temp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_batt"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_press"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_glic"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>
    <!--RadioGroup
        android:id="@+id/rdogrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grafico_test">

        <RadioButton
            android:layout_marginHorizontal="4dp"
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/label_temp"
            android:button="@null"
            android:checked="true"
            android:gravity="center" />

        <RadioButton
            android:layout_marginHorizontal="4dp"
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/label_batt"
            android:button="@null"
            android:gravity="center" />

        <RadioButton
            android:layout_marginHorizontal="4dp"
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/label_press"
            android:button="@null"
            android:gravity="center" />

        <RadioButton
            android:layout_marginHorizontal="4dp"
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/label_glic"
            android:button="@null"
            android:gravity="center" />
    </RadioGroup-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/graphLayout"
        android:layout_width="411dp"
        android:layout_height="645dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_button_group">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="680dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>