<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/cardview_default_elevation">

    <TextView
        android:id="@+id/graphTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Grafici"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:checkedButton="@+id/toggle_btn_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/graphTitle"
        android:layout_marginTop="8dp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle_btn_temp"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_temp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle_btn_batt"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_batt"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle_btn_press"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_press"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle_btn_glic"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_glic"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/graphValueLayout"
        android:layout_width="399dp"
        android:layout_height="298dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/averageValues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_button_group"
        android:layout_marginTop="4dp"
        app:layout_constraintVertical_bias="0.0">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/valueChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="680dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/averageValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginVertical="16dp"
        android:text="Valori medi"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphValueLayout">

    </TextView>

    <TextView
        android:id="@+id/averageOverThreshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:textSize="14sp"
        android:visibility="gone"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/graphAverageLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averageValues" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/graphAverageLayout"
        android:layout_width="399dp"
        android:layout_height="298dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averageValues"
        >

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/averageChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="680dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>