<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditReportActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <!-- Date Picker -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/colorAccent"
        app:backgroundTint="@color/whiteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Temperatura -->
    <RelativeLayout
        android:id="@+id/temperatureLayout"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton">

        <RelativeLayout
            android:id="@+id/relativePriorityTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/temp_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:hint="Priorità"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/tempSlider"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_priority"
                android:layout_marginTop="0dp"
                android:stepSize="1.0"
                android:valueFrom="1f"
                android:valueTo="5f"
                app:haloColor="@color/colorPrimaryDark"
                app:haloRadius="18dp"
                app:thumbColor="@color/colorPrimary"
                app:thumbRadius="8dp"
                app:values="@array/initial_slider_values"
                tools:layout_editor_absoluteX="245dp"
                tools:layout_editor_absoluteY="61dp" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldTemperature"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/relativePriorityTemp"
            android:hint="@string/label_temp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:helperText="valore > 36°"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.Tooltip">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/temperatura_text"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="number"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="40dp" />


        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <!-- Battito -->
    <RelativeLayout
        android:id="@+id/battitoLayout"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureLayout">

        <RelativeLayout
            android:id="@+id/relativePriorityBattito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingStart="8dp"
            android:paddingTop="10dp">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/battitoSlider"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:stepSize="1.0"
                android:valueFrom="1f"
                android:valueTo="5f"
                app:haloColor="@color/colorPrimaryDark"
                app:haloRadius="18dp"
                app:thumbColor="@color/colorPrimary"
                app:thumbRadius="8dp"
                app:values="@array/initial_slider_values"
                tools:layout_editor_absoluteX="245dp"
                tools:layout_editor_absoluteY="61dp" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldBattito"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/relativePriorityBattito"
            android:hint="@string/label_batt"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:helperText="valore > 40"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.Tooltip">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/battito_text"
                android:layout_width="185dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="40dp" />


        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <!-- Glicemia -->
    <RelativeLayout
        android:id="@+id/glicemiaLayout"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/battitoLayout">

        <RelativeLayout
            android:id="@+id/relativePriorityGlicemia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingLeft="8dp"
            android:paddingTop="10dp">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/glicemiaSlider"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:stepSize="1.0"
                android:valueFrom="1f"
                android:valueTo="5f"
                app:haloColor="@color/colorPrimaryDark"
                app:haloRadius="18dp"
                app:thumbColor="@color/colorPrimary"
                app:thumbRadius="8dp"
                app:values="@array/initial_slider_values"
                tools:layout_editor_absoluteX="245dp"
                tools:layout_editor_absoluteY="61dp" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldGlicemia"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/relativePriorityGlicemia"
            android:hint="@string/label_glic"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:helperText="valore > 60"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.Tooltip">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/glicemia_text"
                android:layout_width="185dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="40dp" />


        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <!-- Pressione -->
    <RelativeLayout
        android:id="@+id/pressioneLayout"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glicemiaLayout">

        <RelativeLayout
            android:id="@+id/relativePriorityPressione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingLeft="8dp"
            android:paddingTop="10dp">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/pressureSlider"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:stepSize="1.0"
                android:valueFrom="1f"
                android:valueTo="5f"
                app:haloColor="@color/colorPrimaryDark"
                app:haloRadius="18dp"
                app:thumbColor="@color/colorPrimary"
                app:thumbRadius="8dp"
                app:values="@array/initial_slider_values"
                tools:layout_editor_absoluteX="245dp"
                tools:layout_editor_absoluteY="61dp" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldPressure"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/relativePriorityPressione"
            android:hint="@string/label_press"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:helperText="valore minore di 120"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.Tooltip">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pressione_text"
                android:layout_width="185dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="40dp" />


        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <!-- Note TextFiled -->
    <RelativeLayout
        android:id="@+id/noteLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/pressioneLayout"
        app:layout_constraintBottom_toTopOf="@id/buttons_constraint">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addNoteTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/relativePriorityPressione"
            android:hint="@string/label_note"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.Tooltip"
            tools:ignore="NotSibling">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="40dp" />


        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteLayout">
        <!-- Save Button -->

        <!-- Delete Button -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_report"
            android:textSize="18sp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/delete_report"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/delete_report"
            android:textColor="@color/colorPrimaryDark"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:textSize="18sp"
            android:visibility="gone"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



